# miden-ntx-state-machine

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
masm/accounts/: state_machine.masm
masm/notes/: update_state.masm
masm/scripts/: deploy.masm
src/: main.rs
tests/: mock_chain.rs
