[package]
name = "miden-ntx-state-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-client = { version = "0.12", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.12" }
miden-lib = { version = "0.12", default-features = false }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.18", features = ["executable"] }
miden-assembly = "0.19"
rand = "0.9"
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
