[package]
name = "miden-ntx-state-machine"
version = "0.1.0"
edition = "2021"

# Pinned to the 0.14 series because that is what Miden testnet is running.
# Bump together with miden-client when testnet upgrades.

[dependencies]
miden-client = { version = "0.14", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.14" }
miden-protocol = { version = "0.14.5", default-features = false }
miden-standards = { version = "0.14.5", default-features = false }
rand = "0.9"
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "macros", "fs"] }

[dev-dependencies]
anyhow = "1"
miden-protocol = { version = "0.14.5", features = ["testing"] }
miden-standards = { version = "0.14.5", features = ["testing"] }
miden-testing = "0.14.5"
miden-tx = "0.14"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
